# unity-api

./: .gitignore  CMakeLists.txt  CTestCustom.cmake.in
debian/: changelog  changelog.rej  control  rules
include/unity/shell/application/: ApplicationInfoInterface.h  Mir.h  MirSurfaceInterface.h
include/unity/util/: GlibMemory.h
src/: CMakeLists.txt
src/unity/api/: CMakeLists.txt
src/unity/util/: FileIO.cpp
src/unity/util/internal/: DaemonImpl.cpp
test/copyright/: check_copyright.sh
test/gtest/: CMakeLists.txt
test/gtest/unity/: CMakeLists.txt
test/gtest/unity/util/GioMemory/: GioMemory_test.cpp
test/gtest/unity/util/ResourcePtr/: ResourcePtr_test.cpp
test/headers/: CMakeLists.txt
test/qmltest/mocks/plugins/Unity/Application/: CMakeLists.txt
test/qmltest/mocks/plugins/Unity/Application/Mocks/: MockApplicationInfo.h
test/qmltest/mocks/plugins/Unity/Launcher/: CMakeLists.txt
test/qmltest/mocks/plugins/Unity/Notifications/: CMakeLists.txt
test/qmltest/mocks/plugins/Unity/Notifications/Mocks/: CMakeLists.txt
test/qmltest/mocks/plugins/Unity/Scopes/: CMakeLists.txt
test/qmltest/modules/TestUtil/: CMakeLists.txt
